# capture

./: .gitignore  AGENTS.md  Cargo.toml  README.md  claude-progress.md  features.json  init.ps1  init.sh  pyproject.toml
.claude/skills/capture-audit/: SKILL.md
.claude/skills/capture-continue/: SKILL.md
.claude/skills/capture-index-eval/: SKILL.md
.claude/skills/capture-index-eval/evals/: evals.json
.claude/skills/capture-index-eval/references/: custom-prompt-cookbook.md  findings.md  subagent-prompts.md
.claude/skills/capture-index-tuning/: SKILL.md
.claude/skills/capture-release/: SKILL.md
.claude/skills/capture-spec/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
agent/macos/: CaptureBar.swift
agent/windows/: Cargo.toml
agent/windows/src/: main.rs
crates/asr/: Cargo.toml
crates/asr-whisper/: Cargo.toml
crates/asr-whisper/src/: lib.rs
crates/asr/examples/: transcribe.rs
crates/asr/src/: backend.rs  config.rs  dynamic.rs  lib.rs  models.rs  runtime.rs
crates/capture-core/: Cargo.toml
crates/capture-core/src/: frames.rs  lib.rs  sessions.rs  v1.rs
crates/capture-index/: Cargo.toml
crates/capture-index/src/: build.rs  lib.rs  live.rs  prompts.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  sessions.rs  time.rs  transcript.rs  v1.rs
crates/core/tests/: asr_runtimes_parse.rs  asr_runtimes_payload.json
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: lib.rs  main.rs
crates/daemon/src/routes/: asr.rs  index.rs  mod.rs  platform.rs  sessions.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: audio_worker.rs  events.rs  helpers.rs  import.rs  lib.rs  process.rs  retranscribe.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  assets.rs  daemon.rs  main.rs  skill.rs  state.rs  theme.rs  update.rs
crates/gui/src/components/: chip.rs  dropdown.rs  icon.rs  list_row.rs  section.rs
crates/gui/src/domain/: asr.rs  capture.rs  indexing.rs  sessions.rs
crates/gui/src/screens/: dashboard.rs  mod.rs  modals.rs  playback.rs  settings.rs
crates/index/: Cargo.toml
crates/index/examples/: golden_replay.rs  index_session.rs
crates/index/src/: lib.rs  live.rs  prompts.toml  providers.rs  vision.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  main.rs  tools.rs
crates/platform/: Cargo.toml  build.rs
crates/platform/examples/: audio.rs  import.rs  screenshot.rs  windows_audio_devices.rs  windows_list.rs
crates/platform/src/: import.rs  lib.rs  macos.rs  macos_mic.rs  windows.rs  windows_audio.rs
design/: ASR-ONBOARDING-BRIEF.md  CAPTURE-HANDOFF.md  Capture Screens (standalone).html  README.md  REDESIGN-BRIEF.md  TASK-session-row-states (1).md  current-design-system.md  unpack_design.py
design/ASR-Onboarding-Handoff/: ASR-ONBOARDING-PLAN.md  README.md
design/ASR-Onboarding-Handoff/references/: design-reference.md
design/screens/: all-settings-reference.html  dashboard-permission-needed.html  dashboard.html  playback-live.html  playback.html  preset-picker.html  settings.html
design/unpacked/: .gitignore  _template.html
docs/: architecture.md  asr-benchmark.md  youtube-capture.md
docs/findings/: mcp-onboarding-2026-06-18.md
docs/specs/: README.md  agent-windows.md  agent.md  asr-runtimes.md  asr.md  audio.md  daemon.md  events.md  gui-redesign.md  gui.md  helper-contract.md  indexing.md  mcp-server.md  permissions-and-signing.md  platform-abstraction.md  process-logs.md  product-architecture.md  screencapturekit-helper.md  screenshots.md  session-registry.md  session.md  v3-architecture.md  windows-release.md  windows.md
examples/: mcp.json
gui/: Cargo.toml
gui/src/: app.rs  assets.rs  daemon.rs  hotkey.rs  main.rs  skill.rs  state.rs  theme.rs  tray.rs  update.rs
gui/src/components/: button.rs  card.rs  chip.rs  list_row.rs  mod.rs  modal.rs  progress.rs
gui/src/domain/: asr.rs  indexing.rs  mod.rs
gui/src/screens/: dashboard.rs  modals.rs  playback.rs  settings.rs
helper/: audiocap.swift  audiocap_win.py
helper/audiocap_win_rs/: Cargo.toml
helper/audiocap_win_rs/src/: main.rs
packaging/: build_macos_dmg.sh  build_runtime_packs.ps1  build_windows.ps1  capture.iss  captured_main.py  entitlements.plist  register_logon_task.ps1  win-build-env.ps1
scripts/: build_asr_pack.sh  build_helper.sh  capture_youtube_playlist.py  playlist_deliverables.py  run_interactive.ps1  setup_codesign.sh  transcribe_audio.py
skills/: README.md
skills/capture/: SKILL.md
skills/capture-mcp-setup/: SKILL.md
skills/capture/references/: quick-actions.md
skills/capture/scripts/: configure_mcp.py  discover_mcp.py  install.ps1  install.sh  report_issue.py  set_model.py
spike/tcc-attribution/: README.md  RUNBOOK.md  make_kit.sh
spike/tcc-attribution/kit/: 01_setup.sh  02_install.sh  03_check.sh  04_update_sim.sh  05_collect.sh  audiocap  captured_spike.py  lib.sh  uninstall.sh
spike/tcc-attribution/results/: FINDINGS.md  launchctl_print.txt  status_after_grant.json  status_after_rotation.json  status_after_update.json  status_before_grant.json  status_final.json  sysinfo.txt
spikes/sck-capture/: Cargo.toml  FINDINGS.md
spikes/sck-capture/src/: main.rs
spikes/whisper-bench/: Cargo.toml
spikes/whisper-bench/src/: main.rs
src/capture_mcp/: __init__.py  audio.py  proc.py  screenshots.py  server.py  session.py  util.py  windows.py
src/capture_mcp/asr/: __init__.py  base.py  whisper_local.py
src/capture_mcp/cli/: __init__.py
src/capture_mcp/core/: __init__.py  audio.py  config.py  events.py  frames.py  import_media.py  indexer.py  live_index.py  permissions.py  presets.py  proc.py  providers.py  registry.py  retranscribe.py  screenshots.py  session.py  util.py  vision_client.py
src/capture_mcp/daemon/: __init__.py  client.py  models.py  server.py
src/capture_mcp/platform/: __init__.py  base.py  macos.py  windows.py
tests/: indexing_hermetic.py  smoke.py
tests/contract/: run_contracts.py
tests/contract/golden/: pcm_chunking.json  session_dir.json  tools_list.json  v1_schema.json
tools/: capture_v1.py  index_prompt_eval.py  recover_mic_rate.py
(+14 files in other folders)
