# v3: the single cargo workspace. Every member lives under crates/ with a prefix-free folder name
# (crates/core, crates/gui, …); the package names keep the `capture-` prefix (so `use capture_core`
# is unchanged and the `core` folder doesn't shadow std's `core` crate). See
# docs/specs/v3-architecture.md. One shared ./target for the whole workspace.
[workspace]
resolver = "2"
members = ["crates/gui", "crates/core", "crates/index", "crates/daemon", "crates/mcp", "crates/asr", "crates/asr-whisper", "crates/platform", "crates/engine"]
