[project]
name = "capture-mcp"
version = "0.1.0"
description = "MCP server that captures a process's window (timestamped screenshots), stdout/stderr, and per-app audio transcribed by a pluggable ASR backend."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "anyio>=4.5",
    "numpy>=1.24",
    # macOS window discovery (Quartz). Gated by platform so the package installs
    # on Windows, where the Win32 backend uses ctypes (no extra deps). The Windows
    # screenshot backend uses GDI+ (gdiplus.dll), also dependency-free.
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# Apple-Silicon-native default ASR backend (macOS/arm64 only).
mlx = ["mlx-whisper>=0.4.0; sys_platform == 'darwin'"]
# Cross-platform CPU/GPU ASR backend (faster-whisper CUDA on the Windows/NVIDIA box).
whisper = ["faster-whisper>=1.0.0"]
# CUDA runtime libs so faster-whisper/CTranslate2 runs on the GPU (Windows/NVIDIA). The
# FasterWhisper backend adds these pip packages' bin dirs to the Windows DLL search path.
cuda = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]
# Windows browser-capture tooling: WASAPI loopback helper + Selenium browser driving + yt-dlp.
capture-windows = [
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
    "selenium>=4.20",
    "yt-dlp>=2024.0",
]
# Remote NVIDIA Riva / Nemotron streaming backend.
riva = ["nvidia-riva-client>=2.15.0"]

[project.scripts]
capture-mcp = "capture_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capture_mcp"]
