[package]
name = "capture-agent"
version = "0.2.5"
edition = "2021"
description = "Capture — Windows system-tray agent (#36): persistent tray + daemon lifecycle + launches the GPUI window. Thin /v1 peer; the sibling of macOS CaptureBar."

# The packaged entry point is Capture.exe (parity with macOS CaptureBar being the bundle entry).
[[bin]]
name = "Capture"
path = "src/main.rs"

[profile.release]
opt-level = 2
strip = true

# Versions deliberately match the GUI crate so a shared target dir reuses already-built (and
# Smart-App-Control-cleared) artifacts — no fresh Cargo build-script probes.
[dependencies]
tray-icon = "0.24.1"
muda = "0.19.2"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
