[package]
name = "capture-core"
version = "0.1.0"
edition = "2021"
description = "Contract types (serde) for the capture /v1 API + on-disk session formats — the v3 source of truth."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Calendar arithmetic for the ISO `YYYY-MM-DDTHH:MM:SS.mmmZ` stamp parse/format (frames + index).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# getppid() for the macOS "exit when the agent dies" watcher (Windows uses a kill-on-close job object).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
