[package]
name = "capture-gui"
version = "0.3.1"
edition = "2021"
description = "Native GPUI desktop app for capture-mcp (daemon client)."

[[bin]]
name = "capture-gui"
path = "src/main.rs"

[dependencies]
capture-core = { path = "../core" }
gpui = "0.2.2"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tray-icon = "0.24.1"
muda = "0.19.2"
global-hotkey = "0.8.0"

# setsid(): detach the macOS updater into its own session so killing the app it spawned from
# (its own parent/grandparent) doesn't take the updater down before it can relaunch.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
