[package]
name = "capture-platform"
version = "0.1.0"
edition = "2021"
description = "v3 platform capture backends: window discovery, screenshots, audio, permissions (macOS ScreenCaptureKit now; Windows later #66)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Screenshot encode (PNG/JPEG) + aspect-preserving downscale — the Rust replacement for the Python's
# `screencapture` + `sips`. Pure-Rust, builds cross-platform.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Spike A (#59): the safe high-level binding mirrors audiocap.swift ~1:1, zero unsafe. macos_15_0 is
# cumulative (pulls 13_0 audio + 14_0 screenshots).
screencapturekit = { version = "7", features = ["macos_15_0"] }
# Pin: apple-metal 0.8.x references macOS-26 SDK symbols that fail to build on the 15.x SDK (spike A).
apple-metal = "=0.6.0"
# Media import (#43): decode an audio/video file's audio track (AVAssetReader) + sample video frames
# (AVAssetImageGenerator), in-process — the Rust replacement for the Swift `audiocap` helper. objc2 0.6
# is version-aligned with what screencapturekit already pulls. Explicit, lean feature sets: the
# cross-framework integrations (objc2-core-media / -core-graphics) are NOT in the crates' defaults.
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-av-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "AVAsset",
    "AVAssetTrack",
    "AVAssetReader",
    "AVAssetReaderOutput",
    "AVAssetImageGenerator",
    "AVMediaFormat",
    "objc2-core-media",
    "objc2-core-graphics",
    "objc2-core-foundation",
] }
objc2-avf-audio = { version = "0.3.2", default-features = false, features = ["std", "AVAudioSettings"] }
objc2-core-media = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-image-io = "0.3.2"
