[package]
name = "capture-platform"
version = "0.1.0"
edition = "2021"
description = "v3 platform capture backends: window discovery, screenshots, audio, permissions (macOS ScreenCaptureKit now; Windows later #66)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Screenshot encode (PNG/JPEG) + aspect-preserving downscale — the Rust replacement for the Python's
# `screencapture` + `sips`. Pure-Rust, builds cross-platform.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows capture backend (#66): window discovery (EnumWindows), GDI screenshots, WASAPI loopback +
# device enumeration. windows-rs 0.61 matches helper/audiocap_win_rs (the proven process-loopback ref).
windows-core = "0.61"
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
]

[target.'cfg(target_os = "macos")'.dependencies]
# Spike A (#59): the safe high-level binding mirrors audiocap.swift ~1:1, zero unsafe. macos_15_0 is
# cumulative (pulls 13_0 audio + 14_0 screenshots).
screencapturekit = { version = "7", features = ["macos_15_0"] }
# Pin: apple-metal 0.8.x references macOS-26 SDK symbols that fail to build on the 15.x SDK (spike A).
apple-metal = "=0.6.0"
# Media import (#43): decode an audio/video file's audio track (AVAssetReader) + sample video frames
# (AVAssetImageGenerator), in-process — the Rust replacement for the Swift `audiocap` helper. objc2 0.6
# is version-aligned with what screencapturekit already pulls. Explicit, lean feature sets: the
# cross-framework integrations (objc2-core-media / -core-graphics) are NOT in the crates' defaults.
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-av-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "AVAsset",
    "AVAssetTrack",
    "AVAssetReader",
    "AVAssetReaderOutput",
    "AVAssetImageGenerator",
    "AVMediaFormat",
    # Live mic capture via AVFoundation (#88): an AVCaptureSession + AVCaptureAudioDataOutput delegate
    # capturing the selected mic at its native wideband rate (16 kHz mSBC for Bluetooth-HFP), bypassing
    # SCK's 8 kHz captureMicrophone. `dispatch2` brings setSampleBufferDelegate:queue: + DispatchQueue.
    "AVCaptureSession",
    "AVCaptureDevice",
    "AVCaptureInput",
    "AVCaptureOutputBase",
    "AVCaptureAudioDataOutput",
    "dispatch2",
    "objc2-core-media",
    "objc2-core-graphics",
    "objc2-core-foundation",
] }
objc2-avf-audio = { version = "0.3.2", default-features = false, features = ["std", "AVAudioSettings"] }
# `CMFormatDescription` + `objc2-core-audio-types` expose CMAudioFormatDescriptionGetStreamBasicDescription
# so the mic delegate can read each buffer's true sample rate from its ASBD (#88).
objc2-core-media = { version = "0.3.2", features = ["CMFormatDescription", "objc2-core-audio-types"] }
objc2-core-audio-types = { version = "0.3.2", features = ["CoreAudioBaseTypes"] }
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-image-io = "0.3.2"
# GCD serial queue for the AVCaptureAudioDataOutput delegate (#88). Same crate objc2-av-foundation's
# `setSampleBufferDelegate:queue:` expects, so the queue type lines up exactly.
dispatch2 = "0.3"
